# stockai

./: .env.example  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
prisma/: Task-DB-Init.md  schema.prisma
scripts/: get_stock_symbols.py  get_us_stock_name.py  get_weekly_us_stock_data.py
src/: updateStockSymbols.ts  updateUsStockNames.ts  updateWeeklyUsStockData.ts
